objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Boards__c</fullName>
        <label>Boards</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bonus_Eligibility_Price__c</fullName>
        <label>Bonus Eligibility Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Booked_Date__c</fullName>
        <label>Booked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Booking_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary Booking Package to be Sent to DMS with Opportunity</description>
        <label>Booking Package</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>((1 OR 2) AND 3) OR 4 OR 5</booleanFilter>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Booking_Package__c.Account__r.Id</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>Booking_Package__c.Opportunity__r.Id</valueField>
            </filterItems>
            <filterItems>
                <field>Booking_Package__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Booking Package</value>
            </filterItems>
            <filterItems>
                <field>$Source.Bypass_for_Filter_Criteria__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Booking_Package__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Booking_SW_txn__c</fullName>
        <formula>If(
AND(
OR(ISPICKVAL(Status__c, &apos;Active&apos;), ISPICKVAL(Status__c, &apos;Won&apos;)),
NOT(CCP__c),
OR(
ISPICKVAL(Transaction_Type__c, &apos;SAM - Altos&apos;),
ISPICKVAL(Transaction_Type__c, &apos;SAM - Azuro&apos;),
ISPICKVAL(Transaction_Type__c, &apos;SAM - Sigrity&apos;),
ISPICKVAL(Transaction_Type__c, &apos;SAM - Forte&apos;),
ISPICKVAL(Transaction_Type__c, &apos;SAM - Jasper&apos;),
ISPICKVAL(Transaction_Type__c, &apos;SAM - Rocketick&apos;)
/***ISPICKVAL(Transaction_Type__c, &apos;VIP&apos;)***/
)),
&apos;Y&apos;,&apos;N&apos;)



/***If(
AND(
OR(ISPICKVAL(Status__c, &apos;Active&apos;), ISPICKVAL(Status__c, &apos;Won&apos;)),
NOT(CCP__c),
NOT(ISPICKVAL(Transaction_Type__c, &apos;Hardware - 99 Year&apos;)),
NOT(ISPICKVAL(Transaction_Type__c, &apos;Hardware - Lease&apos;)),
NOT(ISPICKVAL(Transaction_Type__c, &apos;IP&apos;)),
NOT(ISPICKVAL(Transaction_Type__c, &apos;Ren Maint HW&apos;)),
NOT(ISPICKVAL(Transaction_Type__c, &apos;Serv&apos;)),
NOT(ISPICKVAL(Transaction_Type__c, &apos;&apos;))
),
&apos;Y&apos;,&apos;N&apos;)***/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booking_SW_txn</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bookings_CCP_Maint__c</fullName>
        <formula>IF( 
AND( 
OR(ISPICKVAL(Status__c, &apos;Active&apos;), ISPICKVAL(Status__c, &apos;Won&apos;)), 
CCP__c 
), 
Maint_TCV__c, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings CCP Maint</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_CCP_Prod__c</fullName>
        <formula>IF( 
AND( 
OR(ISPICKVAL(Status__c, &apos;Active&apos;), ISPICKVAL(Status__c, &apos;Won&apos;)), 
CCP__c 
), 
Prod_TCV__c, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings CCP Prod</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_CCP__c</fullName>
        <formula>IF( 
AND( 
  OR(ISPICKVAL(Status__c, &apos;Active&apos;), ISPICKVAL(Status__c, &apos;Won&apos;)), 
  CCP__c
), 
TCV__c, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings CCP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_HW_Maint__c</fullName>
        <formula>IF( 
AND( 
OR(ISPICKVAL(Status__c, &apos;Active&apos;), ISPICKVAL(Status__c, &apos;Won&apos;)), 
NOT(CCP__c), 
OR(ISPICKVAL(Transaction_Type__c, &apos;Hardware - 99 Year&apos;), 
ISPICKVAL(Transaction_Type__c, &apos;Hardware - Lease&apos;),
ISPICKVAL(Transaction_Type__c, &apos;Hardware - Cloud&apos;), 
ISPICKVAL(Transaction_Type__c, &apos;Ren Maint HW&apos;)) 
), 
Maint_TCV__c, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings HW Maint</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_HW_Prod__c</fullName>
        <formula>IF( 
AND( 
OR(ISPICKVAL(Status__c, &apos;Active&apos;), ISPICKVAL(Status__c, &apos;Won&apos;)), 
NOT(CCP__c), 
OR(ISPICKVAL(Transaction_Type__c, &apos;Hardware - 99 Year&apos;), 
ISPICKVAL(Transaction_Type__c, &apos;Hardware - Lease&apos;), 
ISPICKVAL(Transaction_Type__c, &apos;Hardware - Cloud&apos;), 
ISPICKVAL(Transaction_Type__c, &apos;Ren Maint HW&apos;)) 
), 
Prod_TCV__c , 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings HW Prod</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Hardware__c</fullName>
        <formula>IF(
  AND(
     OR(ISPICKVAL(Status__c, &apos;Active&apos;), ISPICKVAL(Status__c, &apos;Won&apos;)),
     NOT(CCP__c),
     OR(ISPICKVAL(Transaction_Type__c, &apos;Hardware - 99 Year&apos;),
     ISPICKVAL(Transaction_Type__c, &apos;Hardware - Lease&apos;),
     ISPICKVAL(Transaction_Type__c, &apos;Hardware - Cloud&apos;),
     ISPICKVAL(Transaction_Type__c, &apos;Ren Maint HW&apos;))
  ),
TCV__c,
0)</formula>
        <label>Bookings Hardware</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_IP_Royalty__c</fullName>
        <formula>IF(
AND(
OR(ISPICKVAL(Status__c, &apos;Active&apos;), ISPICKVAL(Status__c, &apos;Won&apos;)),
NOT(CCP__c),
ISPICKVAL(Transaction_Type__c, &apos;IP&apos;),
INCLUDES(IP_Product_Category__c, &apos;Royalty&apos;)
),
TCV__c,
0)</formula>
        <label>Bookings IP Royalty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_IP_Tensilica_Royalty__c</fullName>
        <formula>IF(
AND(
OR(ISPICKVAL(Status__c, &apos;Active&apos;), ISPICKVAL(Status__c, &apos;Won&apos;)),
NOT(CCP__c),
ISPICKVAL(Transaction_Type__c, &apos;IP - Tensilica&apos;),
INCLUDES(IP_Tensilica_Product_Category__c, &apos;Royalty&apos;)
),
TCV__c,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings IP Tensilica Royalty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_IP_Tensilica__c</fullName>
        <formula>IF(
AND(
OR(ISPICKVAL(Status__c, &apos;Active&apos;), ISPICKVAL(Status__c, &apos;Won&apos;)),
NOT(CCP__c),
ISPICKVAL(Transaction_Type__c, &apos;IP - Tensilica&apos;),
NOT(INCLUDES(IP_Tensilica_Product_Category__c, &apos;Royalty&apos;))
),
TCV__c,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings IP Tensilica</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_IP__c</fullName>
        <formula>IF( 
AND( 
     OR(ISPICKVAL(Status__c, &apos;Active&apos;), ISPICKVAL(Status__c, &apos;Won&apos;)),
     NOT(CCP__c),
     ISPICKVAL(Transaction_Type__c, &apos;IP&apos;),
     NOT(INCLUDES(IP_Product_Category__c, &apos;Royalty&apos;)) 
), 
TCV__c, 
0)</formula>
        <label>Bookings IP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_SW_Maint__c</fullName>
        <formula>IF( 
AND( 
OR(ISPICKVAL(Status__c, &apos;Active&apos;), ISPICKVAL(Status__c, &apos;Won&apos;)), 
NOT(CCP__c), 
NOT(ISPICKVAL(Transaction_Type__c, &apos;Hardware - 99 Year&apos;)), 
NOT(ISPICKVAL(Transaction_Type__c, &apos;Hardware - Lease&apos;)),
NOT(ISPICKVAL(Transaction_Type__c, &apos;Hardware - Cloud&apos;)), 
NOT(ISPICKVAL(Transaction_Type__c, &apos;VIP&apos;)),
NOT(ISPICKVAL(Transaction_Type__c, &apos;IP&apos;)), 
NOT(ISPICKVAL(Transaction_Type__c, &apos;Ren Maint HW&apos;)), 
NOT(ISPICKVAL(Transaction_Type__c, &apos;Serv&apos;)) 
), 
Maint_TCV__c, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings SW Maint</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_SW_Prod__c</fullName>
        <formula>IF( 
AND( 
OR(ISPICKVAL(Status__c, &apos;Active&apos;), ISPICKVAL(Status__c, &apos;Won&apos;)), 
NOT(CCP__c), 
NOT(ISPICKVAL(Transaction_Type__c, &apos;Hardware - 99 Year&apos;)), 
NOT(ISPICKVAL(Transaction_Type__c, &apos;Hardware - Lease&apos;)),
NOT(ISPICKVAL(Transaction_Type__c, &apos;Hardware - Cloud&apos;)), 
NOT(ISPICKVAL(Transaction_Type__c, &apos;VIP&apos;)),
NOT(ISPICKVAL(Transaction_Type__c, &apos;IP&apos;)), 
NOT(ISPICKVAL(Transaction_Type__c, &apos;Ren Maint HW&apos;)), 
NOT(ISPICKVAL(Transaction_Type__c, &apos;Serv&apos;)) 
), 
Prod_TCV__c , 
0)</formula>
        <label>Bookings SW Prod</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Software__c</fullName>
        <formula>IF(
  AND(
     OR(ISPICKVAL(Status__c, &apos;Active&apos;), ISPICKVAL(Status__c, &apos;Won&apos;)),
     NOT(CCP__c),
     NOT(ISPICKVAL(Transaction_Type__c, &apos;Hardware - 99 Year&apos;)),
     NOT(ISPICKVAL(Transaction_Type__c, &apos;Hardware - Cloud&apos;)),
     NOT(ISPICKVAL(Transaction_Type__c, &apos;Hardware - Lease&apos;)),
     NOT(ISPICKVAL(Transaction_Type__c, &apos;IP&apos;)),
     NOT(ISPICKVAL(Transaction_Type__c, &apos;Ren Maint HW&apos;)),
     NOT(ISPICKVAL(Transaction_Type__c, &apos;Serv&apos;)),
     NOT(ISPICKVAL(Transaction_Type__c, &apos;VIP&apos;)),
     NOT(ISPICKVAL(Transaction_Type__c, &apos;IP - Tensilica&apos;)) 
  ),
TCV__c,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings Software</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_VIP__c</fullName>
        <formula>IF(
AND(
OR(ISPICKVAL(Status__c, &apos;Active&apos;), ISPICKVAL(Status__c, &apos;Won&apos;)),
NOT(CCP__c),
ISPICKVAL(Transaction_Type__c, &apos;VIP&apos;)
),
TCV__c,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings VIP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bypass_for_Filter_Criteria__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass for Filter Criteria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to Identify VAR Opportunities based on the Account&apos;s Type = Distributor/VAR</description>
        <label>CCP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CQ_ASP_Ratio_TCV__c</fullName>
        <formula>/* IF(   Expected_Close_Quarter_1__r.Name  =  Current_Fiscal_Quarter__c , MIN(2, ASP_Ratio_SFDC__c ) *  TCV__c, 0) */

IF( AND( TODAY() &gt;= Expected_Close_Quarter_1__r.Quarter_Start_Date__c,
         TODAY() &lt;= Expected_Close_Quarter_1__r.Expected_Close_Date__c
    ),
    MIN(2, ASP_Ratio_SFDC__c ) *  TCV__c,
    0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CQ ASP Ratio * TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CQ_Prior_ASP_Ratio_TCV__c</fullName>
        <formula>/* if(Expected_Close_Quarter_1__r.Name =  Current_Fiscal_Quarter__c , MIN(2, Prior_ASP_Ratio__c) * TCV__c,0) */

IF( AND( TODAY() &gt;= Expected_Close_Quarter_1__r.Quarter_Start_Date__c,
         TODAY() &lt;= Expected_Close_Quarter_1__r.Expected_Close_Date__c
    ),
    MIN(2, Prior_ASP_Ratio__c) * TCV__c,
    0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CQ Prior ASP Ratio * TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CQ_TCV__c</fullName>
        <formula>/* if(  Expected_Close_Quarter_1__r.Name  =  Current_Fiscal_Quarter__c ,  TCV__c , 0) */

IF ( AND( TODAY() &gt;= Expected_Close_Quarter_1__r.Quarter_Start_Date__c,
          TODAY() &lt;= Expected_Close_Quarter_1__r.Expected_Close_Date__c
     ),
     TCV__c,
     0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CQ TCV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cash_RCPT_in_Q0__c</fullName>
        <label>Cash Receipt in Q+0</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cash_RCPT_in_Q1__c</fullName>
        <label>Cash Receipt in Q+1</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cash_RCPT_in_Q2__c</fullName>
        <label>Cash Receipt in Q+2</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Coaches__c</fullName>
        <inlineHelpText>People/groups who are supportive of Cadence versus competitors.</inlineHelpText>
        <label>Coaches</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Committed_Delivery_Date__c</fullName>
        <label>Committed Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Compelling_Event__c</fullName>
        <label>Compelling Event IP</label>
        <picklist>
            <picklistValues>
                <fullName>Budget Access/Expiration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Start Requirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive commit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance Renewal for Ongoing Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Decision Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Start/End Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tape Out Requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Show Demonstration Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Compelling_event_non_IP__c</fullName>
        <inlineHelpText>Why will deal convert to an order?</inlineHelpText>
        <label>Compelling Event</label>
        <picklist>
            <picklistValues>
                <fullName>Budget Access/Expiration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive Expiration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Commit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M&amp;A/Acquired company renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tape Out Requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Win</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <description>Competition for the Opportunity</description>
        <inlineHelpText>Competition for the Opportunity</inlineHelpText>
        <label>Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>ARM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ceva</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Imagination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIPs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rambus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semtech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silicon Image</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Synopsys (ARC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Synopsys (DesignWare)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Synopsys (LisaTek)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Synopsys (Target Compiler)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verisilicon (ZSP)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Compliance__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this deal in relation to a compliance issue?</inlineHelpText>
        <label>Compliance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conditional_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conditional Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conditional_Approval_ref__c</fullName>
        <formula>IF(Conditional_Approval__c,&quot;Set&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conditional Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Days_in_Fiscal_Quarter__c</fullName>
        <label>Contract Days in Fiscal Quarter</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Exception__c</fullName>
        <label>Contract Exception</label>
        <picklist>
            <picklistValues>
                <fullName>Exceeds regional TCV review limit within the quarter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Renewal not reflected in current year quota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eDAcard as Primary contract vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incremental Financial Benefit (debook/rebook)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Std Booking Policy Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ramps &gt; 20% of initial delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Royalty and Gain Share</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP Access Contract</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Status__c</fullName>
        <label>Credit Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bankrupt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit to Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demand Letter Issued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Credit Pkg.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Financial Stmt.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Forecast Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With Collection Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Business_Unit__c</fullName>
        <description>Target Customer&apos;s BU</description>
        <inlineHelpText>Target Customer&apos;s BU</inlineHelpText>
        <label>Customer Business Unit</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_End_Product__c</fullName>
        <description>Target customer end product</description>
        <inlineHelpText>Target customer end product</inlineHelpText>
        <label>Customer End Product</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_MFG_Start_Date__c</fullName>
        <description>Customer Project Manufacturing Start Date</description>
        <inlineHelpText>Customer Project Manufacturing Start Date</inlineHelpText>
        <label>Customer MFG Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Tapeout_Date__c</fullName>
        <description>Customer project tapeout date</description>
        <inlineHelpText>Customer project tapeout date</inlineHelpText>
        <label>Customer Tapeout Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DA_Flow_1_Director__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by Flow 1 and Flow 2 to control approvals</description>
        <label>DA Flow 1 Director</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DA_Flow_1_HQ__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by Flow 1 and Flow 2 to control approvals</description>
        <label>DA Flow 1 HQ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DA_Flow_1_Region__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by Flow 1 and Flow 2 to control approvals</description>
        <label>DA Flow 1 Region</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DA_Flow_1_VP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DA Flow 1 VP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DIP_Type__c</fullName>
        <label>DIP Work Level</label>
        <picklist>
            <picklistValues>
                <fullName>Off the Shelf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configurable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Porting</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DMS_Approval_Input_SFDC__c</fullName>
        <label>DMS Approval Input</label>
        <picklist>
            <picklistValues>
                <fullName>Not Reviewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proceed with FM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMS_to_SFDC_1__c</fullName>
        <label>Cadence Legal Entities</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMS_to_SFDC_2__c</fullName>
        <label>Loan TCV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMS_to_SFDC_3__c</fullName>
        <label>DMS to SFDC 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DQM_Approval_Level__c</fullName>
        <label>DQM Approval Level</label>
        <picklist>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HQ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DQM_Authorized_CIC__c</fullName>
        <label>Initial Target CIC</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DQM_Authorized_Core_SW__c</fullName>
        <label>Initial Target Core SW</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DQM_Authorized_Core_SW_w_o_Loans__c</fullName>
        <label>Initial Target Core SW w/o Loans</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DQM_Authorized_DSG__c</fullName>
        <label>Initial Target DSG</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DQM_Authorized_SPB__c</fullName>
        <label>Initial Target SPB</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DQM_Authorized_SVG_SW__c</fullName>
        <label>Initial Target SVG SW</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DQM_Prop_vs_Auth__c</fullName>
        <formula>IF(
 AND(
  IF( DQM_Proposed_Core_SW__c = 0, TRUE, ROUND( DQM_Proposed_Core_SW__c, 3) &gt;= ROUND( Final_Authorized_Core_SW_DQM__c, 3)),
  IF( DQM_Proposed_DSG__c = 0, TRUE, ROUND( DQM_Proposed_DSG__c, 3) &gt;= ROUND( Final_Authorized_DSG_DQM__c, 3)),
  IF( DQM_Proposed_CIC__c = 0, TRUE, ROUND( DQM_Proposed_CIC__c, 3) &gt;= ROUND( Final_Authorized_CIC_DQM__c, 3)),
  IF( DQM_Proposed_SPB__c = 0, TRUE, ROUND( DQM_Proposed_SPB__c, 3) &gt;= ROUND( Final_Authorized_SPB_DQM__c, 3)),
  IF( DQM_Proposed_SVG_SW__c = 0, TRUE, ROUND( DQM_Proposed_SVG_SW__c, 3) &gt;= ROUND( Final_Authorized_SVG_SW_DQM__c, 3)),
  IF( DQM_Proposed_Core_SW_w_o_Loans__c = 0, TRUE, ROUND( DQM_Proposed_Core_SW_w_o_Loans__c, 3) &gt;= ROUND( Final_Authorized_Core_SW_w_o_Loans_DQM__c, 3))
),
0,
1
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DQM Prop vs Auth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DQM_Proposed_CIC__c</fullName>
        <label>DQM Proposed CIC</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DQM_Proposed_Core_SW__c</fullName>
        <inlineHelpText>DQM Ratio for Fast Track</inlineHelpText>
        <label>DQM Proposed Core SW</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DQM_Proposed_Core_SW_w_o_Loans__c</fullName>
        <label>DQM Proposed Core SW w/o Loans</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DQM_Proposed_DSG__c</fullName>
        <label>DQM Proposed DSG</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DQM_Proposed_SPB__c</fullName>
        <label>DQM Proposed SPB</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DQM_Proposed_SVG_SW__c</fullName>
        <label>DQM Proposed SVG SW</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DQM_Region_Override_Factor__c</fullName>
        <label>DQM Region Override Factor</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DQM_Trend_Core_SW__c</fullName>
        <inlineHelpText>DQM Trend for Fast Track</inlineHelpText>
        <label>DQM Trend Core SW</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DQP__c</fullName>
        <description>It will be used for identifying and tracking  approximately 10-25 Q4/Q1 opportunities
.Only Sr Sales Mgmt and Finance will enter values into and report based on this field</description>
        <label>Shutdown</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DRB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSD_or_FID__c</fullName>
        <formula>OR( Deal_Start_Date_Check__c  &lt;&gt; &quot;&quot; , FID_Check__c &lt;&gt; &quot;&quot;)</formula>
        <label>DSD or FID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Sync_Remark__c</fullName>
        <label>Data Sync Remark</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data_Sync_Status__c</fullName>
        <label>Data Sync Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Sync_Time__c</fullName>
        <label>Data Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deal_Approval_Level__c</fullName>
        <formula>IF( ISPICKVAL(Transaction_Type__c , &quot;SAM&quot;),
CASE(
MAX(
IF( TCV__c &gt; 3000000,2,IF( TCV__c &gt; 300000,1,0)),
IF( ISPICKVAL(Transaction_Type__c , &quot;SAM&quot;), /* redundant */
IF( AND(TCV__c &gt; 1000000,Proposed_Discount__c &gt; 0.80), 2,
IF( AND(TCV__c &gt; 300000,TCV__c &lt;= 1000000,Proposed_Discount__c &gt; 0.65), 2,
IF( AND(TCV__c &lt;=300000,Proposed_Discount__c &gt; 0.50), 2,1))),0)
),
1, &quot;Region&quot;,
2, &quot;HQ&quot;,
&quot;&quot;
), /* SAM */

IF( ISPICKVAL(Transaction_Type__c , &quot;IP&quot;),
CASE(
MAX(
IF( TCV__c &gt; 3000000,2,IF( TCV__c&gt; 300000,1,0)),
IF( ISPICKVAL(Transaction_Type__c , &quot;IP&quot;),
IF( AND(TCV__c&gt; 1000000,Proposed_Discount__c &gt; 0.50), 2,
IF( AND(TCV__c&gt; 300000,TCV__c&lt;= 1000000,Proposed_Discount__c &gt; 0.35), 2,
IF( AND(TCV__c &lt;=300000,Proposed_Discount__c &gt; 0.25), 2,1))),0)
),
1, &quot;Region&quot;,
2, &quot;HQ&quot;,
&quot;&quot;
), /* IP */


IF( ISPICKVAL(Transaction_Type__c , &quot;VIP&quot;),
CASE(
MAX(
IF( TCV__c &gt; 3000000,2,IF( TCV__c &gt; 300000,1,0)),
IF( ISPICKVAL(Transaction_Type__c , &quot;VIP&quot;),
IF( AND(TCV__c &gt; 1000000,Proposed_Discount__c &gt; 0.80), 2,
IF( AND(TCV__c &gt; 300000,TCV__c &lt;= 1000000,Proposed_Discount__c &gt; 0.65), 2,
IF( AND(TCV__c &lt;=300000,Proposed_Discount__c &gt; 0.50), 2,1))),0)
),
1, &quot;Region&quot;,
2, &quot;HQ&quot;,
&quot;&quot;
), /* VIP */

IF(ISPICKVAL(Transaction_Type__c , &quot;Serv&quot;),
CASE(
MAX(
IF( TCV__c &gt; 1000000,2,IF( TCV__c &gt; 250000,1,0)),
IF( ISPICKVAL(Transaction_Type__c , &quot;Serv&quot;), IF( AND( TCV__c &gt; 250000, Service_Margin__c &lt; 0.45), 2, 1),0)
),
1, &quot;Region&quot;,
2, &quot;HQ&quot;,
&quot;&quot;
), /* Serv */

LEFT( Authorization__c, FIND( &quot;_&quot; , Authorization__c) - 1)
))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Approval Level</label>
        <type>Text</type>
    </fields>
</CustomObject>